--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.24.0",
+    "react-native-share": "^10.0.2",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
