--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,16 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.8'
+    }
+
+}
+allprojects {
+    repositories {
+        google()
+        mavenLocal()
+        jcenter()
+        maven { url 'https://maven.google.com' }
 
     }
 }
