--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-firebase/app": "^14.5.0",
+    "@react-native-firebase/auth": "^14.5.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.6.4",
     "i": "^0.3.7",
-    "lottie-react-native": "^6.4.1",
     "moment": "^2.29.4",
     "npm": "^10.2.3",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-axios": "^0.17.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.3.3",
     "react-native-element-dropdown": "^2.10.0",
